feat(product): update endpoint to patch branch product availability and stock
